Mon Sep 13 21:24:40 2004  Tim Janik  <timj@gtk.org>

	* docs/beast-index.texi: document list and link list updates.

	* beast-gtk/bstapp.[hc]: help menu revamp, and other menu improvements.

	* beast-gtk/dialogs/radgets-beast.xml: BstApp menu adaptions.

	* beast-gtk/gxk/gxktexttools.c: open external web browser when links
	are activated that use the protocols: http, https, ftp or mailto.

	* beast-gtk/gxk/gxkutils.[hc]: added gxk_show_url(), a function to
	invoke an external web browser.

Mon Sep 13 14:10:21 2004  Tim Janik  <timj@gtk.org>

	* data/beast.desktop.in: added mime type for audio/x-bse and
	audio/x-bsewave, pointed out by Artem Popov.

Sun Sep 12 03:35:46 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstparamview.c:
	* beast-gtk/bstpreferences.c: changed layouts to use 
	gxk_scrolled_window_create().

	* beast-gtk/bsttracksynthdialog.c:
	* beast-gtk/bstitemseqdialog.c:
	* beast-gtk/bstpartdialog.c:
	* beast-gtk/bstfiledialog.c:
	* beast-gtk/bstapp.c: adjusted dialog sizes, constrained to screen size.

	* beast-gtk/bsteventroll.c: adjusted height requisition.

	* beast-gtk/gxk/gxkdialog.[hc]: added gxk_dialog_set_sizes().

	* beast-gtk/gxk/gxkutils.[hc]: removed gxk_notebook_add_page() in favour
	of gxk_notebook_append(), fixed callers.
	gxk_widget_proxy_requisition(): added x/y scale arguments.
	gxk_scrolled_window_create(): new convenience function.
	gxk_scrolled_window_unspare_space(): 
	gxk_scrolled_window_spare_space(): save extra space allocated by gtk+.
	gxk_signal_handler_exists(): figure whether a certain signal callback
	is connected.
	gxk_signal_handler_pending(): check for unblocked handlers only.

	* beast-gtk/gxk/gxkauxwidgets.[hc]: added GxkScrolledWindow which is
	a GtkScrolledWindow with ::spare-space property to call
	gxk_scrolled_window_spare_space() through the property interface,
	and reduced scrollbar spacing in the class structure.

	* beast-gtk/gxk/gxkradget.c: fixed up comparison logic in mf_floatcmp()