@@ -21,11 +21,9 @@
 #include <math.h>
 
 
-/* --- variables --- */
-static gpointer parent_class = NULL;
-
-
 /* --- functions --- */
+G_DEFINE_TYPE (BstProjectCtrl, bst_project_ctrl, GTK_TYPE_HBOX);
+
 void
 bst_project_ctrl_play (BstProjectCtrl *self)
 {
@@ -52,6 +50,67 @@ bst_project_ctrl_stop (BstProjectCtrl *self)
       bse_project_stop (self->project);
       gxk_status_set (GXK_STATUS_DONE, _("Stopping Playback"), NULL);
     }
+}
+
+static void
+bst_project_ctrl_finalize (GObject *object)
+{
+  BstProjectCtrl *self = BST_PROJECT_CTRL (object);
+  bst_project_ctrl_set_project (self, 0);
+  G_OBJECT_CLASS (bst_project_ctrl_parent_class)->finalize (object);
+}
+
+static void
+project_state_changed (BstProjectCtrl *self,
+		       SfiChoice       choice)
+{
+  BseProjectState state = bse_project_state_from_choice (choice);
+
+  if (self->led)
+    switch (state)
+      {
+      case BSE_PROJECT_ACTIVE:
+	gxk_led_set_color (self->led, GXK_LED_BLUE);
+	break;
+      case BSE_PROJECT_PLAYING:
+	gxk_led_set_color (self->led, GXK_LED_GREEN);
+	break;
+      default:
+	gxk_led_set_color (self->led, GXK_LED_OFF);
+	break;
+      }
+}
+
+static void
+project_release (BstProjectCtrl *self)
+{
+  bst_project_ctrl_set_project (self, 0);
+}
+
+void
+bst_project_ctrl_set_project (BstProjectCtrl *self,
+			      SfiProxy        project)
+{
+  g_return_if_fail (BST_IS_PROJECT_CTRL (self));
+  if (project)
+    g_return_if_fail (BSE_IS_PROJECT (project));
+
+  if (self->project)
+    bse_proxy_disconnect (self->project,
+			  "any_signal", project_state_changed, self,
+			  "any_signal::release", project_release, self,
+			  NULL);
+  self->project = project;
+  if (self->project)
+    {
+      bse_proxy_connect (self->project,
+			 "swapped_signal::state-changed", project_state_changed, self,
+			 "swapped_signal::release", project_release, self,
+			 NULL);
+      project_state_changed (self, bse_project_state_to_choice (bse_project_get_state (self->project)));
+    }
+  else if (self->led)
+    gxk_led_set_color (self->led, GXK_LED_OFF);
 }
 
 static void
@@ -122,76 +181,11 @@ bst_project_ctrl_init (BstProjectCtrl *self)
   gtk_widget_show_all (box);
 }
 
-static void
-bst_project_ctrl_finalize (GObject *object)
-{
-  BstProjectCtrl *self = BST_PROJECT_CTRL (object);
-  bst_project_ctrl_set_project (self, 0);
-  G_OBJECT_CLASS (parent_class)->finalize (object);
-}
-
-GType
-bst_project_ctrl_get_type (void)
-{
-  static GType type = 0;
-  if (!type)
-    type = gxk_object_derive (GTK_TYPE_HBOX, "BstProjectCtrl", &parent_class,
-			      sizeof (BstProjectCtrl), sizeof (BstProjectCtrlClass),
-			      GXK_METHOD_INIT, bst_project_ctrl_init,
-			      GXK_METHOD_FINALIZE, bst_project_ctrl_finalize,
-			      0);
-  return type;
-}
 
 static void
-project_state_changed (BstProjectCtrl *self,
-		       SfiChoice       choice)
+bst_project_ctrl_class_init (BstProjectCtrlClass *class)
 {
-  BseProjectState state = bse_project_state_from_choice (choice);
+  GObjectClass *gobject_class = G_OBJECT_CLASS (class);
 
-  if (self->led)
-    switch (state)
-      {
-      case BSE_PROJECT_ACTIVE:
-	gxk_led_set_color (self->led, GXK_LED_BLUE);
-	break;
-      case BSE_PROJECT_PLAYING:
-	gxk_led_set_color (self->led, GXK_LED_GREEN);
-	break;
-      default:
-	gxk_led_set_color (self->led, GXK_LED_OFF);
-	break;
-      }
-}
-
-static void
-project_release (BstProjectCtrl *self)
-{
-  bst_project_ctrl_set_project (self, 0);
-}
-
-void
-bst_project_ctrl_set_project (BstProjectCtrl *self,
-			      SfiProxy        project)
-{
-  g_return_if_fail (BST_IS_PROJECT_CTRL (self));
-  if (project)
-    g_return_if_fail (BSE_IS_PROJECT (project));
-
-  if (self->project)
-    bse_proxy_disconnect (self->project,
-			  "any_signal", project_state_changed, self,
-			  "any_signal::release", project_release, self,
-			  NULL);
-  self->project = project;
-  if (self->project)
-    {
-      bse_proxy_connect (self->project,
-			 "swapped_signal::state-changed", project_state_changed, self,
-			 "swapped_signal::release", project_release, self,
-			 NULL);
-      project_state_changed (self, bse_project_state_to_choice (bse_project_get_state (self->project)));
-    }
-  else if (self->led)
-    gxk_led_set_color (self->led, GXK_LED_OFF);
+  gobject_class->finalize = bst_project_ctrl_finalize;
 }
